# Django_new_lesson28

./: pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: admin.py  models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
goodsite/: settings.py  urls.py
goodsite/fixtures/: skills.json  vacancies.json
vacancies/: models.py  permissions.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py
